--- a/index.html
+++ b/index.html
@@ -2738,6 +2738,7 @@
   </div>
 </section>
 
+<!-- Bottom Navigation Bar -->
 <nav
   class="fixed bottom-0 left-0 right-0 z-50 bg-surface-light dark:bg-surface-dark border-t border-slate-200 dark:border-slate-800 pb-safe pt-2 px-6 shadow-[0_-4px_6px_-1px_rgba(0,0,0,0.05)]"
   data-visible-pages="home,profile,message-hub,my-order">
