--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
               <p class="text-slate-500 dark:text-slate-400 text-sm mb-4 leading-snug">مرسوله ی خود را در دستانی مطمئن به
                 امانت بگذارید</p>
               <button
-                class="w-full py-2.5 bg-primary hover:bg-blue-600 text-white rounded-full text-sm font-bold flex items-center justify-center gap-2 transition-colors shadow-lg shadow-primary/20"
+                class="w-full py-2.5 bg-surface-light dark:bg-surface-dark hover:bg-slate-50 dark:hover:bg-slate-800 text-slate-900 dark:text-white border border-slate-200 dark:border-slate-700 rounded-full text-sm font-bold flex items-center justify-center gap-2 transition-colors"
                 data-route="cargo-cat" type="button">
                 <span>ثبت مرسوله</span>
                 <span class="material-symbols-outlined text-[18px]">arrow_back</span>
@@ -1291,7 +1291,7 @@
             <div class="flex justify-between items-start">
               <div class="flex flex-col gap-1">
                 <span class="text-blue-100 text-xs font-medium">پتانسیل درآمد کل</span>
-                <span class="text-3xl font-extrabold tracking-tight font-display">۲۷۰ OMR </span>
+                <span class="text-3xl font-extrabold tracking-tight font-display">270 OMR </span>
               </div>
               <div class="bg-white/20 backdrop-blur-sm p-2 rounded-lg">
                 <span class="material-symbols-outlined text-white">savings</span>
