--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
             <div
               class="w-full aspect-[2/1] bg-center bg-contain bg-no-repeat mb-2 rounded-lg bg-white/10 backdrop-blur-sm p-4"
               data-alt="Carry to Me Logo"
-              style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuB8SKJB5xj6DotoV572wGlMNsDtaA62TZL5rc3RqA1kUpaRRP5Qpswzs1j-gMUQWOGNTfldXG0mFQKY73qda6JHmCs7QGj0ZJnWzWR0ujsM5JG68uy27xRrds773RTSg0exA0omPyYUjaf66Qqkpldu07xok-i-aiUdiUMcl-HsBHG4WyBTF1_P2dhyS2UPeX0gCbR59GDbcf3Z9dSOjfNDGLoBthZacWO0HTVqVDFUqrxc3p14u12CSftXhbS3s0Ms7N79itEvWMOs'); background-size: cover;">
+              style="background-image: url('carrytome.jpeg'); background-size: cover;">
             </div>
             <div class="space-y-2">
               <div
