--- a/index.html
+++ b/index.html
@@ -396,14 +396,13 @@
     <main class="flex-grow w-full max-w-md mx-auto pb-24">
       <section class="p-4 pt-6">
         <div
-          class="relative overflow-hidden rounded-xl bg-gradient-to-br from-[#0a2e5c] to-[#0f6df0] text-white shadow-lg">
+          class="relative overflow-hidden rounded-xl bg-gradient-to-br from-[#0a2e5c] to-[#0f6df0] text-white shadow-lg padding-bottom">
           <div class="absolute -top-12 -left-12 w-48 h-48 bg-white/10 rounded-full blur-2xl"></div>
           <div class="absolute -bottom-12 -right-12 w-40 h-40 bg-accent/20 rounded-full blur-2xl"></div>
           <div class="relative z-10 p-6 flex flex-col items-center text-center gap-6">
             <div
-              class="w-full aspect-[2/1] bg-center bg-contain bg-no-repeat mb-2 rounded-lg bg-white/10 backdrop-blur-sm p-4"
-              data-alt="Carry to Me Logo"
-              style="background-image: url('carrytome.jpeg'); background-size: cover;">
+              class="flex items-center justify-center w-40 h-40 rounded-full bg-white/10 backdrop-blur-sm overflow-hidden">
+              <img src="/asset/images/logo.jpg" alt="Carry to Me Logo" class="w-full h-full object-cover" />
             </div>
             <div class="space-y-2">
               <div
