--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
           <div class="relative z-10 p-6 flex flex-col items-center text-center gap-6">
             <div
               class="flex items-center justify-center w-40 h-40 rounded-full bg-white/10 backdrop-blur-sm overflow-hidden">
-              <img src="https://github.com/matinZadmehr/carrytome2/asset/images/logo.jpg" alt="Carry to Me Logo" class="w-full h-full object-cover" />
+              <img src="https://raw.githubusercontent.com/matinZadmehr/carrytome2/main/asset/images/logo.jpg" alt="Carry to Me Logo" class="w-full h-full object-cover" />
             </div>
             <div class="space-y-2">
               <div
