--- a/index.html
+++ b/index.html
@@ -3305,11 +3305,9 @@
       </button>
     </div>
   </div>
-
-
 </section>
 
-<section id="page-cargo-order"
+<section id="bottom-nav"
   class="fixed bottom-0 left-0 right-0 z-50 bg-surface-light dark:bg-surface-dark border-t border-slate-200 dark:border-slate-800 pb-safe pt-2 px-6 shadow-[0_-4px_6px_-1px_rgba(0,0,0,0.05)]"
   data-visible-gges="home,profile,message-hub,my-order">
   <div class="max-w-md mx-auto flex items-center justify-between h-16 pb-2">
@@ -3339,6 +3337,20 @@
           <p class="text-xs md:text-sm text-slate-500 dark:text-slate-400 text-right mb-4">لطفاً یکی از گزینه‌های زیر را
             انتخاب کنید</p>
           <div class="grid grid-cols-1 gap-3">
+
+            <button
+              class="w-full flex items-center justify-between gap-2 rounded-xl border border-slate-200 dark:border-slate-700 bg-surface-light dark:bg-surface-dark p-4 hover:border-primary/60 active:scale-[0.98] transition-all "
+              type="button" data-route="cargo-cat" data-close-role-modal>
+              <div class="flex items-center gap-3">
+                <span class="material-symbols-outlined text-red-500 text-[24px] ">mark_email_unread</span>
+                <div class="flex flex-col items-start ">
+                  <span class="text-sm font-bold text-slate-900 dark:text-white">سپارا باش</span>
+                  <span class="text-xs text-slate-500 dark:text-slate-400">ثبت مرسوله برای ارسال</span>
+                </div>
+              </div>
+              <span class="material-symbols-outlined rtl:rotate-180 text-slate-400">arrow_right_alt</span>
+            </button>
+
             <button
               class="w-full flex items-center justify-between gap-2 rounded-xl border border-slate-200 dark:border-slate-700 bg-surface-light dark:bg-surface-dark p-4 hover:border-primary/60 active:scale-[0.98] transition-all"
               type="button" data-route="traveler-route" data-close-role-modal>
@@ -3351,18 +3363,7 @@
               </div>
               <span class="material-symbols-outlined rtl:rotate-180 text-slate-400">arrow_right_alt</span>
             </button>
-            <button
-              class="w-full flex items-center justify-between gap-2 rounded-xl border border-slate-200 dark:border-slate-700 bg-surface-light dark:bg-surface-dark p-4 hover:border-primary/60 active:scale-[0.98] transition-all"
-              type="button" data-route="cargo-cat" data-close-role-modal>
-              <div class="flex items-center gap-3">
-                <span class="material-symbols-outlined text-primary">mark_email_unread</span>
-                <div class="flex flex-col items-start">
-                  <span class="text-sm font-bold text-slate-900 dark:text-white">سپارا باش</span>
-                  <span class="text-xs text-slate-500 dark:text-slate-400">ثبت مرسوله برای ارسال</span>
-                </div>
-              </div>
-              <span class="material-symbols-outlined rtl:rotate-180 text-slate-400">arrow_right_alt</span>
-            </button>
+
           </div>
         </div>
       </div>
@@ -3378,8 +3379,6 @@
       <span class="text-[10px] font-medium">پروفایل</span>
     </a>
   </div>
-
-
   </body>
 
 </html>
