--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
       </section>
 
       <div class="px-6 py-4">
-        <h3 class="text-lg font-bold text-slate-900 dark:text-white">شروع کنید</h3>
+        <h3 class="text-lg font-bold text-slate-900 dark:text-white"></h3>
       </div>
 
       <!-- سپردن کالا -->
