--- a/index.html
+++ b/index.html
@@ -413,16 +413,12 @@
             </div>
 
             <div class="space-y-2">
-              <div
-                class="inline-flex items-center gap-1 px-3 py-1 rounded-full bg-white/20 border border-white/10 text-xs font-medium">
-                <span class="material-symbols-outlined text-[16px] text-accent">verified_user</span>
-                <span>امنیت تضمین شده</span>
-              </div>
 
-              <h2 class="text-2xl font-black">تحویل امن و سریع</h2>
+              <h2 class="text-2xl font-black">تو می سپاری، ما می رسانیم</h2>
 
               <p class="text-white/80 text-sm max-w-[280px] mx-auto">
-                کالای ارزشمند خود را به مسافران تایید شده بسپارید و با خیال راحت تحویل بگیرید.
+                راهکاری نوین برای جابجایی کالاهای ارزشمند
+                جایی که اعتماد،از دست‌های امن آغاز شده به مقصدهای ارزشمند می‌رسد.
               </p>
             </div>
           </div>
@@ -877,13 +873,7 @@
               </button>
             </div>
           </div>
-          <div
-            class="w-full mt-2 rounded-xl bg-slate-100 dark:bg-slate-800/50 p-4 border border-slate-200 dark:border-slate-700/50 flex gap-3 items-start">
-            <span class="material-symbols-outlined text-primary shrink-0 mt-0.5" style="font-size: 20px;">info</span>
-            <p class="text-xs text-slate-600 dark:text-slate-300 leading-relaxed text-right">
-              این مبلغ صرفاً برای محاسبه حق بیمه و تضمین خسارت احتمالی استفاده می‌شود و تاثیری در هزینه حمل ندارد.
-            </p>
-          </div>
+
         </div>
         <div class="h-8 w-full shrink-0"></div>
       </div>
