--- a/index.html
+++ b/index.html
@@ -516,6 +516,8 @@
     aria-hidden="true">
     <div
       class="relative flex h-screen w-full max-w-md mx-auto flex-col bg-background-light dark:bg-background-dark overflow-hidden group/design-root shadow-2xl border-x border-slate-200/50 dark:border-slate-800/50">
+
+      <!-- HEADER -->
       <header
         class="flex items-center justify-between px-4 py-3 shrink-0 bg-background-light dark:bg-background-dark z-20">
         <button
@@ -530,6 +532,8 @@
           لغو
         </button>
       </header>
+
+      <!-- PROGRESS BAR -->
       <div class="px-6 pb-4 pt-1 shrink-0 bg-background-light dark:bg-background-dark z-10">
         <div class="flex w-full flex-row items-center justify-center gap-2">
           <div class="h-1.5 w-full flex-1 rounded-full bg-primary shadow-glow"></div>
@@ -542,8 +546,11 @@
           <span>مرحله ۴</span>
         </div>
       </div>
-      <main class="flex-1 overflow-y-auto overflow-x-hidden no-scrollbar px-5 pb-32">
+
+      <!-- MAIN SCROLLABLE CONTENT -->
+      <main class="flex-1 overflow-y-auto overflow-x-hidden no-scrollbar px-5 pb-48">
         <div class="py-4 flex flex-col gap-4">
+          <!-- INTRO -->
           <div class="flex items-start gap-3">
             <div class="flex-shrink-0 size-10 rounded-full bg-primary/10 flex items-center justify-center text-primary">
               <span class="material-symbols-outlined icon-filled">smart_toy</span>
@@ -559,6 +566,8 @@
               </p>
             </div>
           </div>
+
+          <!-- SEARCH -->
           <div class="relative w-full">
             <div class="absolute inset-y-0 right-0 flex items-center pr-4 pointer-events-none">
               <span class="material-symbols-outlined text-slate-400" style="font-size: 24px;">search</span>
@@ -567,113 +576,130 @@
               class="block w-full py-3.5 pr-12 pl-4 text-sm font-medium text-slate-900 bg-white dark:bg-surface-dark border border-slate-200 dark:border-slate-700 rounded-2xl placeholder-slate-400 dark:text-white dark:placeholder-slate-500 focus:outline-none focus:border-primary focus:ring-1 focus:ring-primary transition-all shadow-sm"
               placeholder="جستجو در دسته‌بندی‌ها..." type="text" />
           </div>
-        </div>
-        <div class="flex flex-col gap-3 mt-2">
-          <button
-            class="group relative flex w-full items-center gap-4 rounded-2xl border border-slate-200 dark:border-slate-700 bg-surface-light dark:bg-surface-dark p-4 transition-all duration-300 hover:border-primary hover:shadow-soft active:scale-[0.98]"
-            type="button">
-            <div
-              class="flex size-12 shrink-0 items-center justify-center rounded-full bg-blue-50 dark:bg-blue-500/10 text-primary transition-transform group-hover:scale-110">
-              <span class="material-symbols-outlined" style="font-size: 24px;">diamond</span>
-            </div>
-            <div class="flex-1 text-right">
-              <span
-                class="block text-sm font-bold text-slate-800 dark:text-slate-200 group-hover:text-primary transition-colors">کالای
-                فلزات ارزشمند</span>
-              <span class="block text-xs text-slate-400 mt-0.5">طلا، جواهرات، نقره، سکه</span>
-            </div>
-            <div
-              class="size-6 rounded-full border-2 border-slate-200 dark:border-slate-600 group-hover:border-primary/50">
-            </div>
-          </button>
-          <button
-            class="group relative flex w-full items-center gap-4 rounded-2xl border border-slate-200 dark:border-slate-700 bg-surface-light dark:bg-surface-dark p-4 transition-all duration-300 hover:border-primary hover:shadow-soft active:scale-[0.98]"
-            type="button">
-            <div
-              class="flex size-12 shrink-0 items-center justify-center rounded-full bg-purple-50 dark:bg-purple-500/10 text-purple-600 dark:text-purple-400 transition-transform group-hover:scale-110">
-              <span class="material-symbols-outlined" style="font-size: 24px;">description</span>
-            </div>
-            <div class="flex-1 text-right">
-              <span
-                class="block text-sm font-bold text-slate-800 dark:text-slate-200 group-hover:text-primary transition-colors">اسناد
-                و مدارک</span>
-              <span class="block text-xs text-slate-400 mt-0.5">پاسپورت، قرارداد، شناسنامه</span>
-            </div>
-            <div
-              class="size-6 rounded-full border-2 border-slate-200 dark:border-slate-600 group-hover:border-primary/50">
-            </div>
-          </button>
-          <button
-            class="group relative flex w-full items-center gap-4 rounded-2xl border border-slate-200 dark:border-slate-700 bg-surface-light dark:bg-surface-dark p-4 transition-all duration-300 hover:border-primary hover:shadow-soft active:scale-[0.98]"
-            type="button">
-            <div
-              class="flex size-12 shrink-0 items-center justify-center rounded-full bg-blue-50 dark:bg-blue-500/10 text-primary transition-transform group-hover:scale-110">
-              <span class="material-symbols-outlined" style="font-size: 24px;">devices</span>
-            </div>
-            <div class="flex-1 text-right">
-              <span
-                class="block text-sm font-bold text-slate-800 dark:text-slate-200 group-hover:text-primary transition-colors">الکترونیک</span>
-              <span class="block text-xs text-slate-400 mt-0.5">موبایل، لپ‌تاپ، دوربین، گوشی، آیفون</span>
-            </div>
-            <div
-              class="size-6 rounded-full border-2 border-slate-200 dark:border-slate-600 group-hover:border-primary/50">
-            </div>
-          </button>
-          <button
-            class="group relative flex w-full items-center gap-4 rounded-2xl border border-slate-200 dark:border-slate-700 bg-surface-light dark:bg-surface-dark p-4 transition-all duration-300 hover:border-primary hover:shadow-soft active:scale-[0.98]"
-            type="button">
-            <div
-              class="flex size-12 shrink-0 items-center justify-center rounded-full bg-teal-50 dark:bg-teal-500/10 text-teal-600 dark:text-teal-400 transition-transform group-hover:scale-110">
-              <span class="material-symbols-outlined" style="font-size: 24px;">medication</span>
-            </div>
-            <div class="flex-1 text-right">
-              <span
-                class="block text-sm font-bold text-slate-800 dark:text-slate-200 group-hover:text-primary transition-colors">پزشکی
-                و بهداشتی</span>
-              <span class="block text-xs text-slate-400 mt-0.5">داروها نسخه دار، تجهیزات پزشکی ، بهداشتی</span>
-            </div>
-            <div
-              class="size-6 rounded-full border-2 border-slate-200 dark:border-slate-600 group-hover:border-primary/50">
-            </div>
-          </button>
-          <button
-            class="group relative flex w-full items-center gap-4 rounded-2xl border border-slate-200 dark:border-slate-700 bg-surface-light dark:bg-surface-dark p-4 transition-all duration-300 hover:border-primary hover:shadow-soft active:scale-[0.98]"
-            type="button">
-            <div
-              class="flex size-12 shrink-0 items-center justify-center rounded-full bg-orange-50 dark:bg-orange-500/10 text-orange-600 dark:text-orange-400 transition-transform group-hover:scale-110">
-              <span class="material-symbols-outlined" style="font-size: 24px;">palette</span>
-            </div>
-            <div class="flex-1 text-right">
-              <span
-                class="block text-sm font-bold text-slate-800 dark:text-slate-200 group-hover:text-primary transition-colors">کالای
-                شکستنی</span>
-              <span class="block text-xs text-slate-400 mt-0.5">تابلو، مجسمه، ظروف شیشه ای، سایر</span>
-            </div>
-            <div
-              class="size-6 rounded-full border-2 border-slate-200 dark:border-slate-600 group-hover:border-primary/50">
-            </div>
-          </button>
-          <button
-            class="group relative flex w-full items-center gap-4 rounded-2xl border border-slate-200 dark:border-slate-700 bg-surface-light dark:bg-surface-dark p-4 transition-all duration-300 hover:border-primary hover:shadow-soft active:scale-[0.98]"
-            type="button">
-            <div
-              class="flex size-12 shrink-0 items-center justify-center rounded-full bg-slate-100 dark:bg-slate-700 text-slate-500 dark:text-slate-300 transition-transform group-hover:scale-110">
-              <span class="material-symbols-outlined" style="font-size: 24px;">grid_view</span>
-            </div>
-            <div class="flex-1 text-right">
-              <span
-                class="block text-sm font-bold text-slate-800 dark:text-slate-200 group-hover:text-primary transition-colors">سایر
-                موارد</span>
-              <span class="block text-xs text-slate-400 mt-0.5">موارد عمومی و جعبه</span>
-            </div>
-            <div
-              class="size-6 rounded-full border-2 border-slate-200 dark:border-slate-600 group-hover:border-primary/50">
-            </div>
-          </button>
+
+          <!-- CATEGORY BUTTONS -->
+          <div class="flex flex-col gap-3 mt-2">
+
+            <!-- Gold / Jewelry -->
+            <button
+              class="group relative flex w-full items-center gap-4 rounded-2xl border border-slate-200 dark:border-slate-700 bg-surface-light dark:bg-surface-dark p-4 transition-all duration-300 hover:border-primary hover:shadow-soft active:scale-[0.98]"
+              type="button">
+              <div
+                class="flex size-12 shrink-0 items-center justify-center rounded-full bg-yellow-50 dark:bg-yellow-500/10 text-yellow-600 dark:text-yellow-400 transition-transform group-hover:scale-110">
+                <span class="material-symbols-outlined" style="font-size: 24px;">diamond</span>
+              </div>
+              <div class="flex-1 text-right">
+                <span
+                  class="block text-sm font-bold text-slate-800 dark:text-slate-200 group-hover:text-primary transition-colors">کالای
+                  فلزات ارزشمند</span>
+                <span class="block text-xs text-slate-400 mt-0.5">طلا، جواهرات، نقره، سکه</span>
+              </div>
+              <div
+                class="size-6 rounded-full border-2 border-slate-200 dark:border-slate-600 group-hover:border-primary/50">
+              </div>
+            </button>
+
+            <!-- Documents -->
+            <button
+              class="group relative flex w-full items-center gap-4 rounded-2xl border border-slate-200 dark:border-slate-700 bg-surface-light dark:bg-surface-dark p-4 transition-all duration-300 hover:border-primary hover:shadow-soft active:scale-[0.98]"
+              type="button">
+              <div
+                class="flex size-12 shrink-0 items-center justify-center rounded-full bg-purple-50 dark:bg-purple-500/10 text-purple-600 dark:text-purple-400 transition-transform group-hover:scale-110">
+                <span class="material-symbols-outlined" style="font-size: 24px;">description</span>
+              </div>
+              <div class="flex-1 text-right">
+                <span
+                  class="block text-sm font-bold text-slate-800 dark:text-slate-200 group-hover:text-primary transition-colors">اسناد
+                  و مدارک</span>
+                <span class="block text-xs text-slate-400 mt-0.5">پاسپورت، قرارداد، شناسنامه</span>
+              </div>
+              <div
+                class="size-6 rounded-full border-2 border-slate-200 dark:border-slate-600 group-hover:border-primary/50">
+              </div>
+            </button>
+
+            <!-- Electronics -->
+            <button
+              class="group relative flex w-full items-center gap-4 rounded-2xl border border-slate-200 dark:border-slate-700 bg-surface-light dark:bg-surface-dark p-4 transition-all duration-300 hover:border-primary hover:shadow-soft active:scale-[0.98]"
+              type="button">
+              <div
+                class="flex size-12 shrink-0 items-center justify-center rounded-full bg-blue-50 dark:bg-blue-500/10 text-primary transition-transform group-hover:scale-110">
+                <span class="material-symbols-outlined" style="font-size: 24px;">devices</span>
+              </div>
+              <div class="flex-1 text-right">
+                <span
+                  class="block text-sm font-bold text-slate-800 dark:text-slate-200 group-hover:text-primary transition-colors">الکترونیک</span>
+                <span class="block text-xs text-slate-400 mt-0.5">موبایل، لپ‌تاپ، دوربین، گوشی، آیفون</span>
+              </div>
+              <div
+                class="size-6 rounded-full border-2 border-slate-200 dark:border-slate-600 group-hover:border-primary/50">
+              </div>
+            </button>
+
+            <!-- Medical / Health -->
+            <button
+              class="group relative flex w-full items-center gap-4 rounded-2xl border border-slate-200 dark:border-slate-700 bg-surface-light dark:bg-surface-dark p-4 transition-all duration-300 hover:border-primary hover:shadow-soft active:scale-[0.98]"
+              type="button">
+              <div
+                class="flex size-12 shrink-0 items-center justify-center rounded-full bg-teal-50 dark:bg-teal-500/10 text-teal-600 dark:text-teal-400 transition-transform group-hover:scale-110">
+                <span class="material-symbols-outlined" style="font-size: 24px;">medication</span>
+              </div>
+              <div class="flex-1 text-right">
+                <span
+                  class="block text-sm font-bold text-slate-800 dark:text-slate-200 group-hover:text-primary transition-colors">پزشکی
+                  و بهداشتی</span>
+                <span class="block text-xs text-slate-400 mt-0.5">داروها نسخه دار، تجهیزات پزشکی، بهداشتی</span>
+              </div>
+              <div
+                class="size-6 rounded-full border-2 border-slate-200 dark:border-slate-600 group-hover:border-primary/50">
+              </div>
+            </button>
+
+            <!-- Fragile -->
+            <button
+              class="group relative flex w-full items-center gap-4 rounded-2xl border border-slate-200 dark:border-slate-700 bg-surface-light dark:bg-surface-dark p-4 transition-all duration-300 hover:border-primary hover:shadow-soft active:scale-[0.98]"
+              type="button">
+              <div
+                class="flex size-12 shrink-0 items-center justify-center rounded-full bg-orange-50 dark:bg-orange-500/10 text-orange-600 dark:text-orange-400 transition-transform group-hover:scale-110">
+                <span class="material-symbols-outlined" style="font-size: 24px;">palette</span>
+              </div>
+              <div class="flex-1 text-right">
+                <span
+                  class="block text-sm font-bold text-slate-800 dark:text-slate-200 group-hover:text-primary transition-colors">کالای
+                  شکستنی</span>
+                <span class="block text-xs text-slate-400 mt-0.5">تابلو، مجسمه، ظروف شیشه ای، سایر</span>
+              </div>
+              <div
+                class="size-6 rounded-full border-2 border-slate-200 dark:border-slate-600 group-hover:border-primary/50">
+              </div>
+            </button>
+
+            <!-- Other -->
+            <button
+              class="group relative flex w-full items-center gap-4 rounded-2xl border border-slate-200 dark:border-slate-700 bg-surface-light dark:bg-surface-dark p-4 transition-all duration-300 hover:border-primary hover:shadow-soft active:scale-[0.98]"
+              type="button">
+              <div
+                class="flex size-12 shrink-0 items-center justify-center rounded-full bg-slate-100 dark:bg-slate-700 text-slate-500 dark:text-slate-300 transition-transform group-hover:scale-110">
+                <span class="material-symbols-outlined" style="font-size: 24px;">grid_view</span>
+              </div>
+              <div class="flex-1 text-right">
+                <span
+                  class="block text-sm font-bold text-slate-800 dark:text-slate-200 group-hover:text-primary transition-colors">سایر
+                  موارد</span>
+                <span class="block text-xs text-slate-400 mt-0.5">موارد عمومی و جعبه</span>
+              </div>
+              <div
+                class="size-6 rounded-full border-2 border-slate-200 dark:border-slate-600 group-hover:border-primary/50">
+              </div>
+            </button>
+
+          </div>
         </div>
       </main>
+
+      <!-- FIXED BOTTOM BUTTON -->
       <div
-        class="absolute bottom-0 left-0 right-0 p-5 bg-gradient-to-t from-background-light via-background-light to-transparent dark:from-background-dark dark:via-background-dark pt-12 z-30">
+        class="sticky bottom-0 p-5 bg-gradient-to-t from-background-light via-background-light to-transparent dark:from-background-dark dark:via-background-dark pt-12 z-30">
         <button
           class="w-full h-14 bg-primary hover:bg-blue-600 text-white font-bold text-lg rounded-full shadow-glow flex items-center justify-center gap-3 transition-all active:scale-[0.98]"
           data-route="cargo-weight" type="button">
@@ -681,8 +707,10 @@
           <span class="material-symbols-outlined" style="font-size: 20px;">arrow_back</span>
         </button>
       </div>
+
     </div>
   </section>
+
   <section id="page-cargo-weight" data-page="cargo-weight"
     class="page hidden bg-background-light dark:bg-background-dark text-slate-900 dark:text-slate-100 font-display transition-colors duration-200 antialiased overflow-x-hidden selection:bg-primary/20 selection:text-primary"
     aria-hidden="true">
